--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.41.1
-altair==5.5.0
-gspread==6.2.1
-google-auth==2.47.0
-pandas==2.2.3
-requests==2.32.5
-pillow==12.1.0
+streamlit>=1.30
+altair>=5,<6
+gspread
+google-auth
+pandas
+requests
+pillow
